--- a/frontend/style.css
+++ b/frontend/style.css
@@ -1,6 +1,10 @@
 body {
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
+    background-image: url('images/background-biblioteca.jpg');
+    background-size: cover;
+    background-position: center;
+    background-attachment: fixed;
 }
 
 .item-lista {
